feat: implement industry-standard age gate across all pages
- Create scripts/age-gate.js with AgeGate class for age verification
  - localStorage persistence with 30-day expiration
  - Forced user interaction model (cannot close without choosing)
  - Legal messaging and federal compliance language
  - Methods: init(), isVerified(), createModal(), attachEventListeners(), handleConfirm(), handleDecline(), hideModal(), isModalVisible()

- Create styles/age-gate.css with professional modal styling
  - Fixed backdrop overlay with blur effect
  - Red accent border (#c00) matching company branding
  - Company logo display (80px height)
  - Responsive design (mobile-first, 600px breakpoint)
  - WCAG accessibility: dark mode, reduced motion, high contrast support
  - Professional gradient background and button states

- Integrate age gate into 16 pages:
  - Core: index.html, ffl-transfers.html, services.html, checkout.html
  - Shop: ammunition.html, magazines.html, gun-parts.html, gear.html, optics.html, reloading.html, survival.html, brands.html, sale.html, guns.html, cart.html

- Add AGE-GATE-IMPLEMENTATION-SUMMARY.md
  - Implementation overview and compliance impact
  - User experience flow documentation
  - Testing instructions
  - Customization guide
  - Next steps for full federal compliance

This addresses the first critical layer of firearms retail compliance, providing legal evidence of good faith age verification attempt. Aligns with industry standards (Primary Arms, ammunition dealers).

--- a/checkout.html
+++ b/checkout.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Checkout - Shopping Cart Demo</title>
+  <title>Checkout</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/age-gate.css">
   <!-- PayPal SDK -->
   <script src="https://www.paypal.com/sdk/js?client-id=ASArfh5BwCVYpK1zGwrOYctsiunuJUqcTWHiKQ0w09YH-7qxwYCWxuqQZNRwJ2J9wihe76wZUR0znZT0&currency=USD"></script>
+  <script src="scripts/age-gate.js"></script>
 </head>
 <body>
   <!-- TOP HEADER BAR (LOGO + SEARCH + ACCOUNT LINKS) -->
@@ -78,8 +80,7 @@
     const cart = JSON.parse(localStorage.getItem('cart') || '[]');
     // Map SKUs to images
     const productImages = {
-      'DEMO-001': 'images/thumbnails/BW0826BG_2.webp',
-      'DEMO-002': 'images/thumbnails/BW1160BL.webp'
+      // ...existing code...
     };
     let total = 0;
     if (cart.length === 0) {
@@ -105,7 +106,7 @@
               amount: {
                 value: total.toFixed(2)
               },
-              description: 'Demo Cart Purchase'
+              // ...existing code...
             }],
             application_context: {
               shipping_preference: 'GET_FROM_FILE' // Let PayPal collect shipping info
