--- a/shop/magazines.html
+++ b/shop/magazines.html
@@ -1,96 +1,87 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Magazines | Modular Gunworks LLC</title>
-  <link rel="stylesheet" href="/style.css">
+  <meta name="description" content="Shop high-capacity magazines for pistols, rifles, and specialty platforms. Filter, sort, and find the perfect magazine for your firearm at Modular Gunworks.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../styles/design-system.css">
+  <link rel="stylesheet" href="../styles/components.css">
+  <link rel="stylesheet" href="../styles/layout.css">
+  <link rel="stylesheet" href="../styles/age-gate.css">
   <link rel="icon" type="image/png" href="../favicon.png">
+  <script src="../scripts/age-gate.js"></script>
 </head>
-
 <body>
-
-  <!-- TOP HEADER BAR -->
   <header class="site-header">
     <div class="header-left">
-      <a href="../index.html" title="Return to Homepage">
-        <img src="../images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" class="logo site-logo" id="site-logo">
-      </a>
-    </div>
-
-    <div class="header-center">
-      <form class="search-form" action="/search">
-        <input type="text" class="search-bar" name="q" placeholder="Search magazines, ammo, or answers...">
-        <button type="submit" class="search-button">
-          <img src="../images/search-icon.svg" alt="Search">
-        </button>
-      </form>
-    </div>
-
-    <div class="header-right">
-      <a href="#">Account Login</a>
-      <a href="#">Help Center</a>
-      <a href="#">View Cart</a>
-
-      <button id="theme-toggle" class="theme-toggle-icon" aria-label="Toggle Theme">
-        <span id="theme-icon">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="none"
-               stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M21 12.79A9 9 0 1 1 11.21 3
-                     7 7 0 0 0 21 12.79z"></path>
-          </svg>
-        </span>
-      </button>
+        <header id="site-header">
+          <nav class="header-nav flex flex-center" style="justify-content:space-between; align-items:center; padding:1.5rem 2rem; background:linear-gradient(90deg,rgba(24,26,27,0.45) 0%,rgba(24,26,27,0.18) 100%), url('../images/header-flag.png') center 40%/cover no-repeat; filter:brightness(1.25) contrast(1.15) saturate(1.2); position:sticky; top:0; z-index:100; box-shadow:0 2px 8px rgba(0,0,0,0.08); min-height:160px;">
+            <div class="flex flex-center" style="gap:1rem; align-items:center; position:relative; z-index:1;">
+              <img src="../images/modular-gunworks-llc.png" alt="Modular Gunworks LLC Logo" style="height:56px; width:auto; background:transparent; border-radius:6px; padding:2px; box-shadow:0 1px 4px rgba(0,0,0,0.08);">
+              <a href="../index.html" class="header-logo" style="font-size:2rem; color:#fff; text-shadow:0 2px 8px #000, 0 1px 0 #222, 0 0 4px #fff; text-decoration:none; font-weight:900; letter-spacing:2px;">Modular Gunworks LLC</a>
+            </div>
+            <form class="search-bar" style="flex:1; max-width:500px; margin:0 2rem; display:flex; position:relative; z-index:1;">
+              <input type="text" placeholder="Search ammo, gear, or answers..." style="flex:1; padding:0.6rem; border-radius:4px 0 0 4px; font-size:1rem;">
+              <button type="submit" class="button" style="border-radius:0 4px 4px 0;">Search</button>
+            </form>
+            <div class="flex flex-center" style="gap:2rem; align-items:center; position:relative; z-index:1;">
+              <a href="#" style="color:var(--color-text-light); text-decoration:none; font-weight:600; font-size:1.1rem;">Account</a>
+              <a href="#" style="color:var(--color-text-light); text-decoration:none; font-weight:600; font-size:1.1rem;">Help</a>
+              <a href="cart.html" style="color:var(--color-text-light); text-decoration:none; font-weight:600; font-size:1.1rem;">Cart</a>
+              <button id="theme-toggle" class="theme-toggle-icon" aria-label="Toggle Theme">
+                <span id="theme-icon"></span>
+              </button>
+            </div>
+          </nav>
+          <nav class="main-categories" style="background:var(--color-accent); padding:0.5rem 2rem; box-shadow:0 2px 8px rgba(0,0,0,0.04);">
+            <div class="flex" style="gap:2.5rem; justify-content:center;">
+              <a href="ammunition.html" class="main-cat-link">Ammunition</a>
+              <a href="magazines.html" class="main-cat-link">Magazines</a>
+              <a href="gun-parts.html" class="main-cat-link">Gun Parts</a>
+              <a href="gear.html" class="main-cat-link">Gear</a>
+              <a href="optics.html" class="main-cat-link">Optics & Sights</a>
+              <a href="reloading.html" class="main-cat-link">Reloading</a>
+              <a href="survival.html" class="main-cat-link">Prep & Survival</a>
+              <a href="brands.html" class="main-cat-link">Brands</a>
+              <a href="sale.html" class="main-cat-link">ON SALE</a>
+            </div>
+          </nav>
+          <div class="promo-banner" style="background:linear-gradient(90deg, var(--color-primary) 0%, var(--color-accent) 100%); color:#fff; text-align:center; font-size:1.15rem; font-weight:600; padding:0.75rem 0; letter-spacing:1px;">
+            <span>Veteran-Owned • Free Shipping on Firearms • FFL Transfers Available • Precision Gunsmithing</span>
+          </div>
+        </header>
     </div>
   </header>
-
   <!-- CATEGORY NAVIGATION -->
-  <nav class="category-nav">
-    <a href="ammunition.html">Ammunition</a>
-    <a href="guns.html">Guns</a>
-    <a href="magazines.html" class="active-category">Magazines</a>
-    <a href="gun-parts.html">Gun Parts</a>
-    <a href="gear.html">Gear</a>
-    <a href="optics.html">Optics & Sights</a>
-    <a href="reloading.html">Reloading</a>
-    <a href="survival.html">Prep & Survival</a>
-    <a href="brands.html">Brands</a>
-    <a href="sale.html">ON SALE</a>
-  </nav>
-
   <!-- HERO FLAG HEADER -->
- <div class="hero-header">
-  <div class="hero-home-title">Magazines</div>
-</div>
+  <div class="hero-header">
+    <div class="hero-home-title">Magazines</div>
+  </div>
   <!-- MAGAZINES HERO -->
   <section class="magazines-hero">
     <div class="magazines-hero-inner" style="text-align: center;">
       <p>High-capacity magazines for pistols, rifles, and specialty platforms</p>
     </div>
   </section>
-
   <!-- MAGAZINES LAYOUT -->
-  <main class="ammo-layout">
-
-    <!-- FILTER SIDEBAR (STICKY-READY) -->
-    <aside class="ammo-sidebar sticky-sidebar">
+  <main class="magazines-layout">
+    <aside class="sidebar sticky-sidebar">
       <h2>Filter Magazines</h2>
-
-      <div id="filter-type" class="ammo-filter-group">
+      <div id="filter-type" class="magazines-filter-group">
         <h3>Type</h3>
         <ul class="filter-list"></ul>
       </div>
-
-      <div id="filter-brand" class="ammo-filter-group">
+      <div id="filter-brand" class="magazines-filter-group">
         <h3>Brand</h3>
         <ul class="filter-list"></ul>
       </div>
-
-      <div id="filter-caliber" class="ammo-filter-group">
+      <div id="filter-caliber" class="magazines-filter-group">
         <h3>Caliber</h3>
         <ul class="filter-list"></ul>
       </div>
-
-      <div id="filter-capacity" class="ammo-filter-group">
+      <div id="filter-capacity" class="magazines-filter-group">
         <h3>Capacity</h3>
         <ul class="filter-list">
           <li><label><input type="checkbox" data-capacity="0-10"> 1–10 rounds</label></li>
@@ -100,8 +91,7 @@
           <li><label><input type="checkbox" data-capacity="51-100"> 51+ rounds</label></li>
         </ul>
       </div>
-
-      <div id="filter-price" class="ammo-filter-group">
+      <div id="filter-price" class="magazines-filter-group">
         <h3>Price</h3>
         <ul class="filter-list">
           <li><label><input type="checkbox" data-price="0-9.99"> Under $10</label></li>
@@ -111,8 +101,7 @@
           <li><label><input type="checkbox" data-price="80-9999">$80+</label></li>
         </ul>
       </div>
-
-      <div id="filter-stock" class="ammo-filter-group">
+      <div id="filter-stock" class="magazines-filter-group">
         <h3>Availability</h3>
         <label>
           <input type="checkbox" id="filter-in-stock">
@@ -120,16 +109,13 @@
         </label>
       </div>
     </aside>
-
     <!-- MAIN CONTENT -->
-    <section class="ammo-main">
-
-      <!-- SORT BAR (STICKY-READY) -->
-      <div class="ammo-sort-bar sticky-sort">
-        <div class="ammo-sort-left">
-          <span class="ammo-result-count">Loading inventory...</span>
+    <section class="magazines-main">
+      <div class="sort-bar sticky-sort">
+        <div class="sort-left">
+          <span class="result-count">Loading inventory...</span>
         </div>
-        <div class="ammo-sort-right">
+        <div class="sort-right">
           <label for="sort-by">Sort by:</label>
           <select id="sort-by">
             <option value="featured">Featured</option>
@@ -138,64 +124,51 @@
           </select>
         </div>
       </div>
-
-      <!-- UNIFIED GRID HEADER -->
-      <h2 class="ammo-unified-header">All Magazines</h2>
-
-      <!-- UNIFIED GRID (DYNAMIC, PAGINATED) -->
-      <div id="ammo-unified-grid" class="ammo-grid"></div>
-
-      <!-- PAGINATION CONTROLS -->
-      <div id="ammo-pagination" class="ammo-pagination">
+      <h2 class="unified-header">All Magazines</h2>
+      <div id="unified-grid" class="product-grid"></div>
+      <div id="pagination" class="pagination">
         <button class="page-btn" data-page="prev" disabled>Previous</button>
         <span class="page-info">Page 1 of 1</span>
         <button class="page-btn" data-page="next" disabled>Next</button>
       </div>
-
     </section>
   </main>
-
   <!-- FOOTER -->
   <footer class="site-footer">
     <div class="footer-columns">
       <div>
         <h4>Company</h4>
         <ul>
-          <li><a href="about.html">About Modular Gunworks</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="contact.html">Contact Us</a></li>
+          <li><a href="../about.html">About Modular Gunworks</a></li>
+          <li><a href="../blog.html">Blog</a></li>
+          <li><a href="../contact.html">Contact Us</a></li>
         </ul>
       </div>
-
       <div>
         <h4>Info</h4>
         <ul>
-          <li><a href="faq.html">FAQ</a></li>
-          <li><a href="ffl.html">FFL Transfers</a></li>
-          <li><a href="order-status.html">Order Status</a></li>
-          <li><a href="shipping.html">Shipping Info</a></li>
+          <li><a href="../faq.html">FAQ</a></li>
+          <li><a href="../ffl.html">FFL Transfers</a></li>
+          <li><a href="../order-status.html">Order Status</a></li>
+          <li><a href="../shipping.html">Shipping Info</a></li>
         </ul>
       </div>
-
       <div>
         <h4>Legal</h4>
         <ul>
-          <li><a href="terms.html">Terms & Conditions</a></li>
-          <li><a href="privacy.html">Privacy Policy</a></li>
-          <li><a href="returns.html">Return Policy</a></li>
+          <li><a href="../terms.html">Terms & Conditions</a></li>
+          <li><a href="../privacy.html">Privacy Policy</a></li>
+          <li><a href="../returns.html">Return Policy</a></li>
         </ul>
       </div>
     </div>
-
     <div class="footer-bottom">
       <p>© 2025 Modular Gunworks LLC. All rights reserved.</p>
       <p><a href="mailto:modulargunworks@gmail.com">modulargunworks@gmail.com</a></p>
     </div>
   </footer>
-
-  <!-- SCRIPTS -->
   <script src="../scripts/magazines-loader.js"></script>
   <script src="../scripts/theme-toggle.js"></script>
-
+  <script src="../scripts/side-cart.js"></script>
 </body>
 </html>
